fix bug form on small device;

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -39,7 +39,6 @@ footer .contact h2 {
 @media only screen and (max-width: 449px) {
 	form {
 		width: 100%;
-		padding: 5px;
 	}
 }
 
